<resources>
    <string name="app_name">Sysprotec</string>
    <string name="unlocked">Unlocked</string>
    <string name="locked">Locked</string>
    <string name="appInstalled">App Installed</string>
    <string name="untrustedAppFound">Untrusted App: %s</string>
    <string name="preventInstall">Prevent app installations</string>
    <string name="warnOnInstall">Notify on installation</string>
    <string name="disableAdmin">Remove device admin permissions</string>
    <string name="license">License</string>
    <string name="hidden_applications">Applications History</string>
</resources>