<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="toggleClicked"
            android:text="ToggleButton"
            android:textOff="@string/unlocked"
            android:textOn="@string/locked" />

        <ToggleButton
            android:id="@+id/installDisableToggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="installDisableClicked"
            android:text="ToggleButton"
            android:textOff="@string/preventInstall"
            android:textOn="@string/warnOnInstall" />

        <Button
            android:id="@+id/disableAdminButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="disableAdminClicked"
            android:text="@string/disableAdmin"
            tools:text="@string/disableAdmin" />

        <Button
            android:id="@+id/hiddenApplicationsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onApplicationsHistoryClicked"
            android:text="@string/hidden_applications" />

        <Button
            android:id="@+id/licenseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onLicenseClicked"
            android:text="@string/license" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>